Phase_IV/todo-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: todo.test
    http:
      paths:
      # 1. Backend Rule
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-back-todo-backend
            port:
              number: 8000
      # 2. Frontend Rule (Changed port to 80)
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-front-todo-frontend
            port:
              number: 80
